package com.example.data.entity.datasource;

public enum DataSourceRoute {
    WRITE,
    READ
}
