@startuml
title DB Read/Write 분리 구조 - 1. 공통 인프라 구성

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam defaultTextAlignment center

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  ArrowColor #475569
  FontColor #0F172A
  HeaderBackgroundColor #F8FAFC
}

skinparam interface {
  BackgroundColor #F8FAFC
  BorderColor #94A3B8
  FontColor #0F172A
}

skinparam note {
  BackgroundColor #EFF6FF
  BorderColor #93C5FD
  FontColor #1E3A8A
}

top to bottom direction

class "ReadWriteDataSourceAutoConfiguration" as ReadWriteDataSourceAutoConfiguration {
  + writeDataSource(...): DataSource
  + readDataSource(...): DataSource
  + routingDataSource(...): DataSource
  + useWriteDataSourceAspect(): UseWriteDataSourceAspect
}

class "TransactionRoutingDataSource" as TransactionRoutingDataSource
class "DataSourceRoutingContext" as DataSourceRoutingContext {
  + push(route): void
  + pop(): void
  + current(): DataSourceRoute
}

enum "DataSourceRoute" as DataSourceRoute {
  WRITE
  READ
}

interface "DataSource" as DataSource
class "writeDataSource" as WriteDataSource <<bean>>
class "readDataSource" as ReadDataSource <<bean>>
class "routingDataSource" as RoutingDataSourceBean <<bean>>

ReadWriteDataSourceAutoConfiguration --> WriteDataSource
ReadWriteDataSourceAutoConfiguration --> ReadDataSource
ReadWriteDataSourceAutoConfiguration --> TransactionRoutingDataSource
RoutingDataSourceBean --|> TransactionRoutingDataSource
WriteDataSource ..|> DataSource
ReadDataSource ..|> DataSource
RoutingDataSourceBean ..|> DataSource

TransactionRoutingDataSource --> DataSourceRoutingContext
TransactionRoutingDataSource --> DataSourceRoute
TransactionRoutingDataSource --> WriteDataSource
TransactionRoutingDataSource --> ReadDataSource

note bottom of ReadWriteDataSourceAutoConfiguration
라우팅 기능이 활성화되면
write, read, routing DataSource를 공통 모듈에서 등록한다.
end note

note bottom of TransactionRoutingDataSource
실제 JPA와 Repository는 이 routingDataSource를 사용하고,
실행 시점에 READ 또는 WRITE를 선택한다.
end note

note bottom of ReadDataSource
read 설정이 없으면
write datasource로 폴백할 수 있다.
end note

@enduml
